--- a/package.json
+++ b/package.json
@@ -15,7 +15,14 @@
     "lint:fix": "npm run lint:fix --workspaces --if-present",
     "format": "prettier --write \"packages/**/src/**/*.ts\"",
     "format:check": "prettier --check \"packages/**/src/**/*.ts\"",
-    "clean": "npm run clean --workspaces --if-present && rm -rf node_modules"
+    "clean": "npm run clean --workspaces --if-present && rm -rf node_modules",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "packages/**/src/**/*.ts": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   },
   "keywords": [
     "mcp",
@@ -41,7 +48,9 @@
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "eslint-plugin-security": "^2.1.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "lint-staged": "^16.2.6",
     "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.0"
