fix: resolve ESLint circular dependency and SARIF upload errors
- Remove plugin:security/recommended from ESLint extends to fix circular reference
- Exclude test files from ESLint project type checking
- Split SARIF uploads into separate steps with unique categories
- Each Docker image scan uploads independently to avoid conflicts

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:security/recommended"
+    "plugin:@typescript-eslint/recommended-requiring-type-checking"
   ],
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "warn",
@@ -26,7 +25,7 @@
     "security/detect-object-injection": "off",
     "security/detect-unsafe-regex": "error"
   },
-  "ignorePatterns": ["dist/", "node_modules/", "coverage/", "*.config.js", "*.config.cjs"],
+  "ignorePatterns": ["dist/", "node_modules/", "coverage/", "*.config.js", "*.config.cjs", "**/__tests__/**"],
   "env": {
     "node": true,
     "es2022": true
