--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,10 @@ jobs:
   docker-build-and-scan:
     name: Docker Build and Security Scan
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
 
     steps:
       - name: Checkout code
@@ -97,10 +101,21 @@ jobs:
           format: 'sarif'
           output: 'trivy-docs-mcp.sarif'
           severity: 'CRITICAL,HIGH'
+        continue-on-error: true
+
+      - name: Check SARIF file exists
+        run: |
+          if [ -f trivy-docs-mcp.sarif ]; then
+            echo "SARIF file exists"
+            ls -lh trivy-docs-mcp.sarif
+          else
+            echo "Warning: SARIF file not found"
+            exit 1
+          fi
 
       - name: Upload docs-mcp scan results
         uses: github/codeql-action/upload-sarif@v4
-        if: always()
+        if: success()
         with:
           sarif_file: 'trivy-docs-mcp.sarif'
           category: 'trivy-docs-mcp'
@@ -112,10 +127,21 @@ jobs:
           format: 'sarif'
           output: 'trivy-network-mcp.sarif'
           severity: 'CRITICAL,HIGH'
+        continue-on-error: true
+
+      - name: Check SARIF file exists
+        run: |
+          if [ -f trivy-network-mcp.sarif ]; then
+            echo "SARIF file exists"
+            ls -lh trivy-network-mcp.sarif
+          else
+            echo "Warning: SARIF file not found"
+            exit 1
+          fi
 
       - name: Upload network-mcp scan results
         uses: github/codeql-action/upload-sarif@v4
-        if: always()
+        if: success()
         with:
           sarif_file: 'trivy-network-mcp.sarif'
           category: 'trivy-network-mcp'
