--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,19 +103,19 @@ jobs:
           severity: 'CRITICAL,HIGH'
         continue-on-error: true
 
-      - name: Check SARIF file exists
+      - name: Debug - List SARIF files
+        if: always()
         run: |
-          if [ -f trivy-docs-mcp.sarif ]; then
-            echo "SARIF file exists"
-            ls -lh trivy-docs-mcp.sarif
-          else
-            echo "Warning: SARIF file not found"
-            exit 1
-          fi
+          echo "Current directory:"
+          pwd
+          echo "Files in current directory:"
+          ls -lah
+          echo "SARIF files:"
+          ls -lh *.sarif || echo "No SARIF files found"
 
       - name: Upload docs-mcp scan results
         uses: github/codeql-action/upload-sarif@v4
-        if: success()
+        if: always() && hashFiles('trivy-docs-mcp.sarif') != ''
         with:
           sarif_file: 'trivy-docs-mcp.sarif'
           category: 'trivy-docs-mcp'
@@ -129,19 +129,9 @@ jobs:
           severity: 'CRITICAL,HIGH'
         continue-on-error: true
 
-      - name: Check SARIF file exists
-        run: |
-          if [ -f trivy-network-mcp.sarif ]; then
-            echo "SARIF file exists"
-            ls -lh trivy-network-mcp.sarif
-          else
-            echo "Warning: SARIF file not found"
-            exit 1
-          fi
-
       - name: Upload network-mcp scan results
         uses: github/codeql-action/upload-sarif@v4
-        if: success()
+        if: always() && hashFiles('trivy-network-mcp.sarif') != ''
         with:
           sarif_file: 'trivy-network-mcp.sarif'
           category: 'trivy-network-mcp'
