--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,6 @@ on:
 
 permissions:
   contents: read
-  security-events: write
 
 jobs:
   test:
@@ -60,10 +59,6 @@ jobs:
   docker-build-and-scan:
     name: Docker Build and Security Scan
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      security-events: write
-      actions: read
 
     steps:
       - name: Checkout code
@@ -103,23 +98,6 @@ jobs:
           severity: 'CRITICAL,HIGH'
         continue-on-error: true
 
-      - name: Debug - List SARIF files
-        if: always()
-        run: |
-          echo "Current directory:"
-          pwd
-          echo "Files in current directory:"
-          ls -lah
-          echo "SARIF files:"
-          ls -lh *.sarif || echo "No SARIF files found"
-
-      - name: Upload docs-mcp scan results
-        uses: github/codeql-action/upload-sarif@v4
-        if: always() && hashFiles('trivy-docs-mcp.sarif') != ''
-        with:
-          sarif_file: 'trivy-docs-mcp.sarif'
-          category: 'trivy-docs-mcp'
-
       - name: Run Trivy vulnerability scanner on network-mcp
         uses: aquasecurity/trivy-action@master
         with:
@@ -129,12 +107,15 @@ jobs:
           severity: 'CRITICAL,HIGH'
         continue-on-error: true
 
-      - name: Upload network-mcp scan results
-        uses: github/codeql-action/upload-sarif@v4
-        if: always() && hashFiles('trivy-network-mcp.sarif') != ''
+      - name: Upload security scan results as artifacts
+        uses: actions/upload-artifact@v4
+        if: always()
         with:
-          sarif_file: 'trivy-network-mcp.sarif'
-          category: 'trivy-network-mcp'
+          name: trivy-security-scans
+          path: |
+            trivy-docs-mcp.sarif
+            trivy-network-mcp.sarif
+          retention-days: 90
 
   validate-vendor-docs:
     name: Validate Vendor Documentation
