--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,12 @@ build/
 *.swp
 *.swo
 *~
-.DS_Store
 
 # Environment variables
 .env
 .env.local
 .env.*.local
+*.credentials
 
 # Logs
 logs/
@@ -25,6 +25,7 @@ logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Test coverage
 coverage/
@@ -39,10 +40,22 @@ temp/
 Thumbs.db
 .DS_Store
 
-# MCP configuration (contains credentials)
+# MCP configuration (may contain credentials - users should customize)
 examples/*config*.json.local
-*.credentials
 
-# GNS3 project files (portable project files are OK, but exclude runtime files)
+# GNS3 runtime files (portable .gns3 topology files are OK)
 *.gns3project
 *.gns3p
+
+# SSH keys and sensitive data
+*.pem
+*.key
+*_rsa
+*_dsa
+*_ecdsa
+*_ed25519
+
+# Personal notes and internal documentation
+NOTES.md
+TODO.md
+*.private.md
