--- a/packages/network-mcp/package.json
+++ b/packages/network-mcp/package.json
@@ -25,8 +25,8 @@
     "ssh",
     "network-device"
   ],
-  "author": "Hakan",
-  "license": "MIT",
+  "author": "NetContext MCP Contributors",
+  "license": "GPL-3.0",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
     "ssh2": "^1.15.0"
