--- a/packages/network-mcp/package.json
+++ b/packages/network-mcp/package.json
@@ -29,6 +29,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
+    "axios": "^1.7.0",
     "ssh2": "^1.15.0"
   },
   "devDependencies": {
