--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Build packages
+        run: npm run build
+
       - name: Lint code
         run: npm run lint
 
@@ -47,9 +50,6 @@ jobs:
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: false
-
-      - name: Build packages
-        run: npm run build
 
       - name: Check build artifacts
         run: |
@@ -162,9 +162,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Build packages
+        run: npm run build
 
       - name: Run npm audit
         run: npm audit --audit-level=high
