fix: add package-lock.json and fix npm ci compatibility
## Changes
- Added package-lock.json from main branch to fix CI dependency sync
- Updated prepare script to allow husky to fail gracefully during npm ci
- Removed workspace-level package-lock.json (not needed with workspaces)

## Issue Fixed
- npm ci was failing with "Missing: axios@1.13.2 from lock file"
- Prepare script was failing when husky not yet installed
- GitHub Actions CI now able to install dependencies properly

## Technical Details
- package-lock.json is required for npm ci in GitHub Actions
- prepare script now uses "husky || true" to avoid breaking npm ci
- Workspace packages use root lock file for dependency resolution

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format": "prettier --write \"packages/**/src/**/*.ts\"",
     "format:check": "prettier --check \"packages/**/src/**/*.ts\"",
     "clean": "npm run clean --workspaces --if-present && rm -rf node_modules",
-    "prepare": "husky"
+    "prepare": "husky || true"
   },
   "lint-staged": {
     "packages/**/src/**/*.ts": [
